GNOME Bugzilla – Bug 747321
basesrc: do not leak buffer pool in error case
Last modified: 2015-04-04 10:16:31 UTC
In gst_base_src_decide_allocation_default: if (!gst_buffer_pool_set_config (pool, config)) goto config_failed; ... if (pool) { ... gst_object_unref (pool); } return TRUE; config_failed: config_failed: GST_ELEMENT_ERROR (basesrc, RESOURCE, SETTINGS, ("Failed to configure the buffer pool"), ("Configuration is most likely invalid, please report this issue.")); return FALSE; The pool is ref'd so it'll be leaked upon goto to config_failed.
Created attachment 300928 [details] [review] gstbasesrc: do not leak buffer pool in error case
Pushed, thanks. I got rid of the if(pool) bit since we know the pool is non-NULL in that case. commit f35ec14d33ad9f7d9dece28fde973003665c538c Author: Ilya Konstantinov <ilya.konstantinov@gmail.com> Date: Sat Apr 4 04:14:50 2015 +0300 basesrc: do not leak buffer pool in error case https://bugzilla.gnome.org/show_bug.cgi?id=747321